main: modifying docker script, and bug fix

--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,5 +1,5 @@
 <div class="h-screen w-screen flex justify-center items-center bg-img bg-cover" style="background-image: url('https://nordic.org.in/login/img/login-whisp.png')">
-    <div [formGroup]="registerForm" class="h-[88%] lg:w-[40%] md:w-[70%] sm:w-[90%] w-full py-10 lg:px-14 md:px-14 sm:px-8 px-7 shadow-lg rounded-lg flex flex-col gap-4 bg-primary_bg overflow-y-auto">
+    <div [formGroup]="registerForm" class="h-[88%] lg:w-[40%] md:w-[70%] sm:w-[90%] w-full py-10 lg:px-14 md:px-14 sm:px-8 px-7 shadow-lg rounded-lg flex flex-col gap-4 bg-slate-50 overflow-y-auto">
         <div class="flex flex-row gap-4">
             <svg class="h-5 w-5 fill-gray-600 my-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z"/></svg>
             <span class="text-gray-600  text-[22px] font-medium">Register User</span>
