main: Auth changes
1. adding auth guard to home component.
2. Implementing expire timer to token.
3. changing toast component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
+<app-toast *ngIf='showToast' [message]="toastMessage" [type]="toastType" (onClose)="hideToast()"></app-toast>
 <router-outlet></router-outlet>
