main: adding shared modal component
1. Adding shared modal component.
2. Modifying toast component.
3. adding auto logout on token expiration

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,9 @@
 <app-toast *ngIf='showToast' [message]="toastMessage" [type]="toastType" (onClose)="hideToast()"></app-toast>
+<app-modal *ngIf="showModal" 
+    (onModalClose)="onCloseModal()"
+    [headerMessage]="modalTitleMsg"
+    [showModalBody]="showModalBody"
+    [footerButtons]="modalFooterBtns"
+    >
+</app-modal>
 <router-outlet></router-outlet>
