--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,223 @@
-<p>home works!</p>
+
+
+<div class="flex flex-row h-screen bg-img bg-cover" style="background-image: url('https://nordic.org.in/login/img/login-whisp.png')">
+   <!-- side bar -->
+   <div id="sidebar" class="overflow-y-auto hidden sm:w-1/3 md:block md:w-1/6 top-0 left-0 z-40 h-screen flex-col" >
+      <div class="flex flex-col gap-8 scrollbar-thin h-full py-7 pl-3 pr-3 overflow-y-auto bg-gray-50 dark:bg-gray-800">
+         <div class="flex flex-col items-center gap-4">
+            <p class="my-2 justify-center"> welcome home </p>
+            <svg class="flex-shrink-0 w-12 h-12" xmlns="http://www.w3.org/2000/svg"
+               viewBox="0 0 640 512">
+               <path
+                  d="M32 0C14.3 0 0 14.3 0 32S14.3 64 32 64H48c8.8 0 16 7.2 16 16V368c0 44.2 35.8 80 80 80h18.7c-1.8 5-2.7 10.4-2.7 16c0 26.5 21.5 48 48 48s48-21.5 48-48c0-5.6-1-11-2.7-16H450.7c-1.8 5-2.7 10.4-2.7 16c0 26.5 21.5 48 48 48s48-21.5 48-48c0-5.6-1-11-2.7-16H608c17.7 0 32-14.3 32-32s-14.3-32-32-32H144c-8.8 0-16-7.2-16-16V80C128 35.8 92.2 0 48 0H32zM192 80V272c0 26.5 21.5 48 48 48H560c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48H464V176c0 5.9-3.2 11.3-8.5 14.1s-11.5 2.5-16.4-.8L400 163.2l-39.1 26.1c-4.9 3.3-11.2 3.6-16.4 .8s-8.5-8.2-8.5-14.1V32H240c-26.5 0-48 21.5-48 48z" />
+            </svg>
+         </div>
+         <ul class="font-medium flex flex-col items-center gap-4">
+            <li class="rounded-lg hover:bg-gray-300 w-40">
+               <a href="#" class=" flex p-2 text-gray-900 rounded-lg group">
+                  <svg
+                     class="mt-1 flex-shrink-0 w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
+                     xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                     <path
+                        d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z" />
+                  </svg>
+   
+                  <span class="ms-3 text-lg">Create</span>
+               </a>
+            </li>
+            <li class="rounded-lg hover:bg-gray-300 w-40">
+               <a href="#" class="flex  p-2 text-gray-900 group">
+                  <svg
+                     class="mt-1 flex-shrink-0 w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
+                     xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
+                     <path
+                        d="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 392c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32v64 24c0 22.1-17.9 40-40 40H160 128.1c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2H104c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9 .1-2.8V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z" />
+                  </svg>
+                  <span class="flex-1 ms-3 text-lg whitespace-nowrap">Home</span>
+               </a>
+            </li>
+   
+            <li class="rounded-lg hover:bg-gray-300 w-40">
+               <a href="#" class="flex  p-2 text-gray-900 group">
+                  <svg
+                     class="mt-1 flex-shrink-0 w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
+                     xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                     <path
+                        d="M256 0c17.7 0 32 14.3 32 32V66.7C368.4 80.1 431.9 143.6 445.3 224H480c17.7 0 32 14.3 32 32s-14.3 32-32 32H445.3C431.9 368.4 368.4 431.9 288 445.3V480c0 17.7-14.3 32-32 32s-32-14.3-32-32V445.3C143.6 431.9 80.1 368.4 66.7 288H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H66.7C80.1 143.6 143.6 80.1 224 66.7V32c0-17.7 14.3-32 32-32zM128 256a128 128 0 1 0 256 0 128 128 0 1 0 -256 0zm128-80a80 80 0 1 1 0 160 80 80 0 1 1 0-160z" />
+                  </svg>
+                  <span class="flex-1 text-lg ms-3 whitespace-nowrap">Locations</span>
+               </a>
+            </li>
+   
+            <li class="rounded-lg hover:bg-gray-300 w-40">
+               <a href="#" class="flex  p-2 text-gray-900 group">
+                  <svg
+                     class="mt-1 flex-shrink-0 w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
+                     xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                     <path
+                        d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z" />
+                  </svg>
+                  <span class="flex-1 text-lg ms-3 whitespace-nowrap">Search</span>
+               </a>
+            </li>
+   
+            <li class="rounded-lg hover:bg-gray-300 w-40">
+               <a href="#" class="flex  p-2 text-gray-900 group">
+                  <svg
+                     class="mt-1 flex-shrink-0 w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
+                     xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                     <path
+                        d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z" />
+                  </svg>
+                  <span class="flex-1 text-lg ms-3 whitespace-nowrap">Profile</span>
+               </a>
+            </li>
+            <li class="rounded-lg hover:bg-gray-300 w-40">
+               <a href="#" class="flex  p-2 text-gray-900 group">
+                  <svg
+                     class="mt-1 flex-shrink-0 w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
+                     xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                     <path
+                        d="M495.9 166.6c3.2 8.7 .5 18.4-6.4 24.6l-43.3 39.4c1.1 8.3 1.7 16.8 1.7 25.4s-.6 17.1-1.7 25.4l43.3 39.4c6.9 6.2 9.6 15.9 6.4 24.6c-4.4 11.9-9.7 23.3-15.8 34.3l-4.7 8.1c-6.6 11-14 21.4-22.1 31.2c-5.9 7.2-15.7 9.6-24.5 6.8l-55.7-17.7c-13.4 10.3-28.2 18.9-44 25.4l-12.5 57.1c-2 9.1-9 16.3-18.2 17.8c-13.8 2.3-28 3.5-42.5 3.5s-28.7-1.2-42.5-3.5c-9.2-1.5-16.2-8.7-18.2-17.8l-12.5-57.1c-15.8-6.5-30.6-15.1-44-25.4L83.1 425.9c-8.8 2.8-18.6 .3-24.5-6.8c-8.1-9.8-15.5-20.2-22.1-31.2l-4.7-8.1c-6.1-11-11.4-22.4-15.8-34.3c-3.2-8.7-.5-18.4 6.4-24.6l43.3-39.4C64.6 273.1 64 264.6 64 256s.6-17.1 1.7-25.4L22.4 191.2c-6.9-6.2-9.6-15.9-6.4-24.6c4.4-11.9 9.7-23.3 15.8-34.3l4.7-8.1c6.6-11 14-21.4 22.1-31.2c5.9-7.2 15.7-9.6 24.5-6.8l55.7 17.7c13.4-10.3 28.2-18.9 44-25.4l12.5-57.1c2-9.1 9-16.3 18.2-17.8C227.3 1.2 241.5 0 256 0s28.7 1.2 42.5 3.5c9.2 1.5 16.2 8.7 18.2 17.8l12.5 57.1c15.8 6.5 30.6 15.1 44 25.4l55.7-17.7c8.8-2.8 18.6-.3 24.5 6.8c8.1 9.8 15.5 20.2 22.1 31.2l4.7 8.1c6.1 11 11.4 22.4 15.8 34.3zM256 336a80 80 0 1 0 0-160 80 80 0 1 0 0 160z" />
+                  </svg>
+                  <span class="flex-1 text-lg ms-3 whitespace-nowrap">Tools</span>
+               </a>
+            </li>
+            <li class="rounded-lg hover:bg-gray-300 w-40">
+               <a href="#" class="flex  p-2 text-gray-900 group">
+                  <svg
+                     class="mt-1 flex-shrink-0 w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
+                     xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                     <path
+                        d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 192 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l210.7 0-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l128-128zM160 96c17.7 0 32-14.3 32-32s-14.3-32-32-32L96 32C43 32 0 75 0 128L0 384c0 53 43 96 96 96l64 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-64 0c-17.7 0-32-14.3-32-32l0-256c0-17.7 14.3-32 32-32l64 0z" />
+                  </svg>
+                  <span class="text-lg flex-1 ms-3 whitespace-nowrap">Sign Out</span>
+               </a>
+            </li>
+         </ul>
+
+      </div>
+   </div>
+
+   <!-- main section -->
+   <div class="overflow-y-auto w-full md:w-5/6 flex flex-col">
+
+      <!-- top header -->
+      <div class="h-[12%] top-0 fixed z-[99] shadow-lg w-full flex flex-row items-center md:hidden bg-gray-600 ">  
+         <button id="hamBurgerBtn" *ngIf="showMenu" type="button" (click)="toggleSidebar($event)"
+            class=" md:hidden lg:hidden inline-flex items-center p-2 mt-1 ml-1 text-sm text-gray-500 rounded-lg hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200"> 
+            <svg class="w-5 h-5"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/></svg>
+            
+         </button>
+        
+      </div>
+
+      <!-- Body section -->
+      <div (click)="closeSideBar()" class=" h-[88%] md:h-[100%] flex flex-col gap-6 p-5">
+         <section>
+            <h3 class="flex gap-2 items-center mb-3 pl-1 text-lg"> Quick Statistics </h3>
+            <div class="grid grid-cols-2 gap-2 md:grid-cols-4 md:gap-6">
+               <div *ngFor="let i of [0,1,2,3,4,5,6,7,8,9,10]" class="items-center bg-slate-400 rounded-md shadow-md flex flex-col gap-1 p-3 ">
+                  <p>Total value</p>
+                  <p>100$</p>
+               </div>
+            </div>
+         </section>
+         <section>
+            <h3 class="flex gap-2 items-center mb-3 pl-1 text-lg"> Recently Added </h3>
+            <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
+               <table class="w-full text-sm text-left rtl:text-right text-gray-500">
+                  <thead class="text-xs text-gray-700 uppercase bg-slate-400">
+                     <tr>
+                           <th scope="col" class="px-6 py-3">
+                              Product name
+                           </th>
+                           <th scope="col" class="px-6 py-3">
+                              Color
+                           </th>
+                           <th scope="col" class="px-6 py-3">
+                              Category
+                           </th>
+                           <th scope="col" class="px-6 py-3">
+                              Price
+                           </th>
+                           <th scope="col" class="px-6 py-3">
+                              <span class="sr-only">Edit</span>
+                           </th>
+                     </tr>
+                  </thead>
+                  <tbody>
+                     <tr class="bg-white border-b hover:bg-gray-200">
+                           <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap ">
+                              Apple MacBook Pro 17"
+                           </th>
+                           <td class="px-6 py-4">
+                              Silver
+                           </td>
+                           <td class="px-6 py-4">
+                              Laptop
+                           </td>
+                           <td class="px-6 py-4">
+                              $2999
+                           </td>
+                           <td class="px-6 py-4 text-right">
+                              <a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
+                           </td>
+                     </tr>
+                     <tr class="bg-white border-b  hover:bg-gray-200 ">
+                           <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap ">
+                              Microsoft Surface Pro
+                           </th>
+                           <td class="px-6 py-4">
+                              White
+                           </td>
+                           <td class="px-6 py-4">
+                              Laptop PC
+                           </td>
+                           <td class="px-6 py-4">
+                              $1999
+                           </td>
+                           <td class="px-6 py-4 text-right">
+                              <a href="#" class="font-medium text-blue-600 hover:underline">Edit</a>
+                           </td>
+                     </tr>
+                     <tr class="bg-white  hover:bg-gray-200 ">
+                           <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap ">
+                              Magic Mouse 2
+                           </th>
+                           <td class="px-6 py-4">
+                              Black
+                           </td>
+                           <td class="px-6 py-4">
+                              Accessories
+                           </td>
+                           <td class="px-6 py-4">
+                              $99
+                           </td>
+                           <td class="px-6 py-4 text-right">
+                              <a href="#" class="font-medium text-blue-600 hover:underline">Edit</a>
+                           </td>
+                     </tr>
+                  </tbody>
+               </table>
+            </div>
+         </section>
+         <section>
+            <h3 class="flex gap-2 items-center mb-3 pl-1 text-lg"> Storage Locations </h3>
+            <div class="grid grid-cols-1 sm:grid-cols-2 card md:grid-cols-3 gap-4"> 
+               <a href="" class="card w-60 overflow-x-auto bg-slate-400 text-base-content rounded-md transition duration-300 shadow-md" >
+                  <div class="flex flex-row p-4 gap-x-10">
+                     <span>icon</span>
+                     <span>garden</span>
+                     <span>count</span>
+                  </div>
+               </a>
+            </div>
+         </section>
+         <section>
+            label section
+         </section>
+      </div>
+   </div>
+</div>
+  
