main: modification to theme setting

--- a/src/themes/default.scss
+++ b/src/themes/default.scss
@@ -5,10 +5,11 @@ html[data-theme="default"] {
   --color-background-base: #cfcfcf;
   --color-button-primary: #80a18a;
   --color-btn-primary-hover : #549066;
+  --color-btn-secondary-hover: #D1D5DB;
   --color-header: #2c2e27;
-  --color-primary-text : #c5ffd7;
-  --color-secondary-text : #2c3e21;
-  --color-badge-secondary : #ecf4e7;
-
+  --color-background-card: #90a389;
   --color-text-primary: #bdc6d4;
+  --color-text-secondary : #2c3e21;
+  --color-badge-secondary : #ecf4e7;
+  --color-icon-fill: #2c3e21;
 }
