--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,8 @@
 
 <div class="flex flex-row h-screen bg-img bg-cover bg-baseBgCol">
    <!-- side bar -->
-   <div id="sidebar" class="overflow-y-auto hidden sm:w-1/3 md:block md:w-1/6 top-0 left-0 z-40 h-screen flex-col" >
+   <app-sidebar></app-sidebar>
+   <!-- <div id="sidebar" class="overflow-y-auto hidden sm:w-1/3 md:block md:w-1/6 top-0 left-0 z-40 h-screen flex-col" >
       <div class="flex flex-col gap-8 scrollbar-thin h-full py-7 pl-3 pr-3 overflow-y-auto bg-bgColorSidebar">
          <div class="flex flex-col items-center gap-4">
             <p class="my-2 justify-center text-textColSecondary"> welcome home </p>
@@ -96,7 +97,7 @@
          </ul>
 
       </div>
-   </div>
+   </div> -->
 
    <!-- main section -->
    <div class="overflow-y-auto w-full md:w-5/6 flex flex-col">
