main: adding retro theme

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -38,7 +38,7 @@
             <div class="grid grid-cols-2 gap-2 md:grid-cols-6 md:gap-6">
                 <ng-container *ngFor="let theme of themeArray">
                     <div (click)="changeTheme(theme.name)" [ngStyle]="{'background-color': theme.bgColor}" class="shadow-lg items-center rounded-md flex flex-col gap-1 p-3 hover:cursor-pointer">
-                        <p  [ngStyle]="{'text-color': theme.titleColor}">
+                        <p  [ngStyle]="{'color': theme.titleColor}">
                             {{theme.name | titlecase}}
                         </p>
                         <div class="flex flex-row gap-2">
