--- a/src/themes/night.scss
+++ b/src/themes/night.scss
@@ -5,6 +5,9 @@ html[data-theme="night"] {
   --color-background-base: #0c1322;
   --color-button-primary: #0e6d97;
   --color-btn-primary-hover: #14739d;
+
+  --color-btn-secondary: #011a25;
+
   --color-btn-secondary-hover: #7990cb;
   --color-header: #1e293b;
   --color-background-card: #125668;
