--- a/src/themes/retro.scss
+++ b/src/themes/retro.scss
@@ -5,6 +5,9 @@ html[data-theme="retro"] {
   --color-background-base: #9b884c;
   --color-button-primary: #e5a19e;
   --color-btn-primary-hover: #d26560;
+
+  --color-btn-secondary: #a95a56;
+
   --color-btn-secondary-hover: #9b884c;
   --color-header: #e4d8b4;
   --color-background-card: #e4d8b4;
