--- a/src/themes/default.scss
+++ b/src/themes/default.scss
@@ -5,6 +5,9 @@ html[data-theme="default"] {
   --color-background-base: #cfcfcf;
   --color-button-primary: #80a18a;
   --color-btn-primary-hover : #549066;
+
+  --color-btn-secondary: #2c2e27;
+
   --color-btn-secondary-hover: #D1D5DB;
   --color-header: #2c2e27;
   --color-background-card: #90a389;
