main: modification to modal popup, manual logout implemented

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
     (onModalClose)="onCloseModal($event)"
     [headerMessage]="modalTitleMsg"
     [showModalBody]="showModalBody"
+    [modalName]="popupName"
     [showBodyContent]="bodyContent"
     [hasAnyForm]="hasFormControls"
     [formCtrlInfo]="formControlInfo"
