--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -53,4 +53,17 @@
         </p>
     </div>
 </div>
+<!-- <button #triggerBtn class="hidden" (click)="autoLogout()">
+    popup modal
+</button> -->
 
+<!-- <app-modal *ngIf="showModal" 
+    (onModalClose)="onCloseModal($event)"
+    [headerMessage]="modalTitleMsg"
+    [showModalBody]="showModalBody"
+    [showBodyContent]="bodyContent"
+    [hasAnyForm]="hasFormControls"
+    [formCtrlInfo]="formControlInfo"
+    [footerButtons]="modalFooterBtns"
+    >
+</app-modal> -->
