--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -39,7 +39,7 @@
             </dl>
 
             <div class="flex flex-row gap-4">
-                <button type="button" class="bg-buttonSecondary px-3 py-1 rounded-md text-textColPrimary hover:bg-btnPrimaryHover">Change Password</button>
+                <button (click)="changePassword()" type="button" class="bg-buttonSecondary px-3 py-1 rounded-md text-textColPrimary hover:bg-btnPrimaryHover">Change Password</button>
                 <button type="button" class="bg-buttonSecondary px-3 py-1 rounded-md text-textColPrimary hover:bg-btnPrimaryHover">Generate Invite Link</button>
             </div>
            
