--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -79,7 +79,7 @@
             </a>
          </li>
          <li class="rounded-lg hover:bg-btnSecondaryHover w-40">
-            <a href="#" class="flex flex-row justify-center p-2 text-textColSecondary group">
+            <a (click)="signOut()" class="flex flex-row justify-center p-2 text-textColSecondary group">
                <svg
                    class="mt-1 flex-shrink-0 w-5 h-5 fill-iconFillCol transition duration-75"
                    xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
