--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 <app-modal *ngIf="showModal" 
     (onModalClose)="onCloseModal($event)"
     [headerMessage]="modalTitleMsg"
+    [headerDescription]="modalTitleDescription"
     [showModalBody]="showModalBody"
     [modalName]="popupName"
     [showBodyContent]="bodyContent"
