--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -32,10 +32,10 @@
                     Invite users, and manage your account.
                 </span>
             </div>
-           
+
             <dl class="divide-y divide-gray-600 flex flex-col">
-                <span class="flex flex-row gap-48 py-5"> <p>Name</p> <p>Demo</p> </span>
-                <span class="flex flex-row gap-48 py-5"> <p>Email</p> <p>demo@mail.in</p> </span>
+                <span class="flex flex-row gap-48 py-5"> <p>Name</p> <p>{{userInfo?.userName | titlecase}}</p> </span>
+                <span class="flex flex-row gap-48 py-5"> <p>Email</p> <p>{{userInfo?.userMail}}</p> </span>
             </dl>
 
             <div class="flex flex-row gap-4">
