--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,100 +1,99 @@
-<div class="flex flex-row h-screen bg-img bg-cover bg-baseBgCol">
-    <!-- side bar -->
-   <app-sidebar></app-sidebar>
+<div class="flex flex-col gap-6 p-5">
+    <!-- Profile Section  -->
+    <section class="bg-buttonPrimary p-4 rounded-lg shadow-xl flex flex-col gap-2">
+        <div class="flex flex-col gap-1 text-textColSecondary">
+            <span class="flex flex-row gap-2 ">
+                <svg class="mt-2 flex-shrink-0 w-5 h-5 fill-iconFillCol transition duration-75"
+                    xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                    <path
+                        d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z" />
+                </svg>
+                <h1 class="font-bold text-3xl">User Profile</h1>
+            </span>
+            <span>
+                Invite users, and manage your account.
+            </span>
+        </div>
 
-   <div class="overflow-y-hidden w-full flex flex-col">
+        <dl class="divide-y divide-gray-600 flex flex-col">
+            <span class="flex flex-row gap-48 py-5">
+                <p>Name</p>
+                <p>{{userInfo?.userName | titlecase}}</p>
+            </span>
+            <span class="flex flex-row gap-48 py-5">
+                <p>Email</p>
+                <p>{{userInfo?.userMail}}</p>
+            </span>
+        </dl>
 
-    <!-- top header -->
-    <div class="h-[12%] z-[99] shadow-lg w-full flex flex-row items-center md:hidden bg-gray-600 ">  
-       <button id="hamBurgerBtn" *ngIf="showMenu" type="button" (click)="toggleSidebar($event)"
-          class=" md:hidden lg:hidden inline-flex items-center p-2 mt-1 ml-1 text-sm text-gray-500 rounded-lg hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200"> 
-          <svg class="w-5 h-5"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/></svg>
-          
-       </button>
-      
-    </div>
+        <div class="flex flex-row gap-4">
+            <button (click)="changePassword()" type="button"
+                class="bg-buttonSecondary px-3 py-1 rounded-md text-textColPrimary hover:bg-btnPrimaryHover">Change
+                Password</button>
+            <button type="button"
+                class="bg-buttonSecondary px-3 py-1 rounded-md text-textColPrimary hover:bg-btnPrimaryHover">Generate
+                Invite Link</button>
+        </div>
 
-    <!-- Body section -->
-    <div (click)="closeSideBar()" class="overflow-y-auto h-[88%] md:h-[100%] flex flex-col gap-6 p-5">
+    </section>
 
-       <!-- Profile Section  -->
-        <section class="bg-buttonPrimary p-4 rounded-lg shadow-xl flex flex-col gap-2">
-            <div class="flex flex-col gap-1 text-textColSecondary">
+    <!-- Notifier Section -->
+    <section class="bg-buttonPrimary p-4 rounded-lg shadow-xl">
+        <div class="flex flex-col gap-1 text-textColSecondary">
+            <div class="flex flex-col gap-1">
                 <span class="flex flex-row gap-2 ">
                     <svg class="mt-2 flex-shrink-0 w-5 h-5 fill-iconFillCol transition duration-75"
                         xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
                         <path
-                            d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z" />
+                            d="M224 0c-17.7 0-32 14.3-32 32V51.2C119 66 64 130.6 64 208v18.8c0 47-17.3 92.4-48.5 127.6l-7.4 8.3c-8.4 9.4-10.4 22.9-5.3 34.4S19.4 416 32 416H416c12.6 0 24-7.4 29.2-18.9s3.1-25-5.3-34.4l-7.4-8.3C401.3 319.2 384 273.9 384 226.8V208c0-77.4-55-142-128-156.8V32c0-17.7-14.3-32-32-32zm45.3 493.3c12-12 18.7-28.3 18.7-45.3H224 160c0 17 6.7 33.3 18.7 45.3s28.3 18.7 45.3 18.7s33.3-6.7 45.3-18.7z" />
                     </svg>
-                    <h1 class="font-bold text-3xl">User Profile</h1>
+                    <h1 class="font-bold text-3xl">Notifiers</h1>
                 </span>
                 <span>
-                    Invite users, and manage your account.
+                    Get notifications for up coming maintenance reminders
                 </span>
+            </div><br>
+            <div>
+                <button type="button"
+                    class="bg-buttonSecondary px-3 py-1 rounded-md text-textColPrimary hover:bg-btnPrimaryHover">Create</button>
             </div>
+        </div>
+    </section>
 
-            <dl class="divide-y divide-gray-600 flex flex-col">
-                <span class="flex flex-row gap-48 py-5"> <p>Name</p> <p>{{userInfo?.userName | titlecase}}</p> </span>
-                <span class="flex flex-row gap-48 py-5"> <p>Email</p> <p>{{userInfo?.userMail}}</p> </span>
-            </dl>
+    <!-- Theme Setting section -->
+    <section class="flex flex-col gap-6 bg-buttonPrimary p-4 rounded-lg shadow-xl">
+        <div class="flex flex-col gap-1 text-textColSecondary">
+            <span class="flex flex-row gap-2 ">
+                <svg xmlns="http://www.w3.org/2000/svg" class="mt-2 flex-shrink-0 w-7 h-7 fill-iconFillCol "
+                    viewBox="0 0 576 512">
+                    <path
+                        d="M41.4 9.4C53.9-3.1 74.1-3.1 86.6 9.4L168 90.7l53.1-53.1c28.1-28.1 73.7-28.1 101.8 0L474.3 189.1c28.1 28.1 28.1 73.7 0 101.8L283.9 481.4c-37.5 37.5-98.3 37.5-135.8 0L30.6 363.9c-37.5-37.5-37.5-98.3 0-135.8L122.7 136 41.4 54.6c-12.5-12.5-12.5-32.8 0-45.3zm176 221.3L168 181.3 75.9 273.4c-4.2 4.2-7 9.3-8.4 14.6H386.7l42.3-42.3c3.1-3.1 3.1-8.2 0-11.3L277.7 82.9c-3.1-3.1-8.2-3.1-11.3 0L213.3 136l49.4 49.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0zM512 512c-35.3 0-64-28.7-64-64c0-25.2 32.6-79.6 51.2-108.7c6-9.4 19.5-9.4 25.5 0C543.4 368.4 576 422.8 576 448c0 35.3-28.7 64-64 64z" />
+                </svg>
+                <h1 class="font-bold text-3xl">Theme Settings</h1>
+            </span>
+            <span>
+                Theme settings are stored in your browser's local storage. You can change the theme at any time. If
+                you're having trouble setting your theme try refreshing your browser.
+            </span>
+        </div>
 
-            <div class="flex flex-row gap-4">
-                <button (click)="changePassword()" type="button" class="bg-buttonSecondary px-3 py-1 rounded-md text-textColPrimary hover:bg-btnPrimaryHover">Change Password</button>
-                <button type="button" class="bg-buttonSecondary px-3 py-1 rounded-md text-textColPrimary hover:bg-btnPrimaryHover">Generate Invite Link</button>
-            </div>
-           
-        </section>
-
-        <!-- Notifier Section -->
-        <section class="bg-buttonPrimary p-4 rounded-lg shadow-xl">
-            <div class="flex flex-col gap-1 text-textColSecondary">
-                <div class="flex flex-col gap-1">
-                    <span class="flex flex-row gap-2 ">
-                        <svg class="mt-2 flex-shrink-0 w-5 h-5 fill-iconFillCol transition duration-75" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M224 0c-17.7 0-32 14.3-32 32V51.2C119 66 64 130.6 64 208v18.8c0 47-17.3 92.4-48.5 127.6l-7.4 8.3c-8.4 9.4-10.4 22.9-5.3 34.4S19.4 416 32 416H416c12.6 0 24-7.4 29.2-18.9s3.1-25-5.3-34.4l-7.4-8.3C401.3 319.2 384 273.9 384 226.8V208c0-77.4-55-142-128-156.8V32c0-17.7-14.3-32-32-32zm45.3 493.3c12-12 18.7-28.3 18.7-45.3H224 160c0 17 6.7 33.3 18.7 45.3s28.3 18.7 45.3 18.7s33.3-6.7 45.3-18.7z"/>
-                        </svg>
-                        <h1 class="font-bold text-3xl">Notifiers</h1>
-                    </span>
-                    <span>
-                        Get notifications for up coming maintenance reminders
-                    </span>
-                </div><br>
-                <div>
-                    <button type="button" class="bg-buttonSecondary px-3 py-1 rounded-md text-textColPrimary hover:bg-btnPrimaryHover">Create</button>
-                </div>
-            </div>
-        </section>
-
-       <!-- Theme Setting section -->
-       <section class="flex flex-col gap-6 bg-buttonPrimary p-4 rounded-lg shadow-xl">
-            <div class="flex flex-col gap-1 text-textColSecondary">
-                <span class="flex flex-row gap-2 ">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="mt-2 flex-shrink-0 w-7 h-7 fill-iconFillCol " viewBox="0 0 576 512"><path d="M41.4 9.4C53.9-3.1 74.1-3.1 86.6 9.4L168 90.7l53.1-53.1c28.1-28.1 73.7-28.1 101.8 0L474.3 189.1c28.1 28.1 28.1 73.7 0 101.8L283.9 481.4c-37.5 37.5-98.3 37.5-135.8 0L30.6 363.9c-37.5-37.5-37.5-98.3 0-135.8L122.7 136 41.4 54.6c-12.5-12.5-12.5-32.8 0-45.3zm176 221.3L168 181.3 75.9 273.4c-4.2 4.2-7 9.3-8.4 14.6H386.7l42.3-42.3c3.1-3.1 3.1-8.2 0-11.3L277.7 82.9c-3.1-3.1-8.2-3.1-11.3 0L213.3 136l49.4 49.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0zM512 512c-35.3 0-64-28.7-64-64c0-25.2 32.6-79.6 51.2-108.7c6-9.4 19.5-9.4 25.5 0C543.4 368.4 576 422.8 576 448c0 35.3-28.7 64-64 64z"/></svg>
-                    <h1 class="font-bold text-3xl">Theme Settings</h1>
-                </span>
-                <span >
-                    Theme settings are stored in your browser's local storage. You can change the theme at any time. If you're having trouble setting your theme try refreshing your browser.
-                </span>
-            </div>
-            
-            <div class="grid grid-cols-2 gap-2 md:grid-cols-6 md:gap-6">
-                <ng-container *ngFor="let theme of themeArray">
-                    <div (click)="changeTheme(theme.name)" [ngStyle]="{'background-color': theme.bgColor}" class="shadow-lg items-center rounded-md flex flex-col gap-1 p-3 hover:cursor-pointer">
-                        <p  [ngStyle]="{'color': theme.titleColor}">
-                            {{theme.name | titlecase}}
-                        </p>
-                        <div class="flex flex-row gap-2">
-                            <div [ngStyle]="{'background-color': theme.colorPalette[0]}" class="w-5 rounded-md px-1">A</div>
-                            <div [ngStyle]="{'background-color': theme.colorPalette[1]}" class="w-5 rounded-md px-1">B</div>
-                            <div [ngStyle]="{'background-color': theme.colorPalette[2]}" class="w-5 rounded-md px-1">C</div>
-                            <div [ngStyle]="{'background-color': theme.colorPalette[3]}" class=" w-5 rounded-md px-1">D</div>
+        <div class="grid grid-cols-2 gap-2 md:grid-cols-6 md:gap-6">
+            <ng-container *ngFor="let theme of themeArray">
+                <div (click)="changeTheme(theme.name)" [ngStyle]="{'background-color': theme.bgColor}"
+                    class="shadow-lg items-center rounded-md flex flex-col gap-1 p-3 hover:cursor-pointer">
+                    <p [ngStyle]="{'color': theme.titleColor}">
+                        {{theme.name | titlecase}}
+                    </p>
+                    <div class="flex flex-row gap-2">
+                        <div [ngStyle]="{'background-color': theme.colorPalette[0]}" class="w-5 rounded-md px-1">A</div>
+                        <div [ngStyle]="{'background-color': theme.colorPalette[1]}" class="w-5 rounded-md px-1">B</div>
+                        <div [ngStyle]="{'background-color': theme.colorPalette[2]}" class="w-5 rounded-md px-1">C</div>
+                        <div [ngStyle]="{'background-color': theme.colorPalette[3]}" class=" w-5 rounded-md px-1">D
                         </div>
                     </div>
-                </ng-container>
-                
-            </div>
-       </section>
+                </div>
+            </ng-container>
 
-       
-    </div>
- </div>
+        </div>
+    </section>
 </div>
