main: designed item details page

--- a/src/app/item-detail/item-detail.component.html
+++ b/src/app/item-detail/item-detail.component.html
@@ -1,3 +1,15 @@
 <div class="flex flex-col gap-6 p-5">
+    <section class="flex flex-col gap-4">
+        <div>
 
+        </div>
+        <div class="flex flex-row">
+            <button class="p-2 rounded-l-md font-medium bg-buttonPrimary"> Details </button>
+            <button class="p-2 font-medium bg-buttonPrimary"> Maintenance </button>
+            <button class="p-2 rounded-r-md font-medium bg-buttonPrimary"> Edit </button>
+        </div>
+    </section>
+    <section class="flex flex-col gap-6">
+
+    </section>
 </div>
