main: Dividing to Feature modules, implemented lazy loading, code modularity

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -48,7 +48,7 @@
         </button>
         <p class="text-xs text-gray-600 font-normal mt-2 cursor-default w-full text-center">
             New User ? Click 
-            <span (click)="navigateTo('register')" class="text-blue-500 hover:underline cursor-pointer">here</span> 
+            <span (click)="navigateTo('auth/register')" class="text-blue-500 hover:underline cursor-pointer">here</span> 
             to Register
         </p>
     </div>
