--- a/src/app/my-home/sidebar/sidebar.component.html
+++ b/src/app/my-home/sidebar/sidebar.component.html
@@ -22,7 +22,7 @@
             </a>
          </li>
          <li class="rounded-lg hover:bg-btnSecondaryHover w-40"> 
-            <a href="#" class="flex flex-row justify-center p-2 text-textColSecondary group">
+            <a href="/user/home" class="flex flex-row justify-center p-2 text-textColSecondary group">
                 <svg
                    class="mt-1 flex-shrink-0 w-5 h-5 fill-iconFillCol transition duration-75 "
                    xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
@@ -34,7 +34,7 @@
          </li>
  
          <li class="rounded-lg hover:bg-btnSecondaryHover w-40">
-            <a href="#" class="flex flex-row justify-center p-2 text-textColSecondary group">
+            <a href="/user/home" class="flex flex-row justify-center p-2 text-textColSecondary group">
                <svg class="mt-1 flex-shrink-0 w-5 h-5 fill-iconFillCol transition duration-75" xmlns="http://www.w3.org/2000/svg"
                   viewBox="0 0 512 512">
                   <path
@@ -45,7 +45,7 @@
          </li>
  
          <li class="rounded-lg hover:bg-btnSecondaryHover w-40">
-            <a href="#" class="flex flex-row justify-center p-2 text-textColSecondary group">
+            <a href="/user/home" class="flex flex-row justify-center p-2 text-textColSecondary group">
                <svg
                    class="mt-1 flex-shrink-0 w-5 h-5 fill-iconFillCol transition duration-75"
                    xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
@@ -57,7 +57,7 @@
          </li>
  
          <li class="rounded-lg hover:bg-btnSecondaryHover w-40">
-            <a href="profile" class="flex flex-row justify-center p-2 text-textColSecondary group">
+            <a href="/user/profile" class="flex flex-row justify-center p-2 text-textColSecondary group">
                <svg
                    class="mt-1 flex-shrink-0 w-5 h-5 fill-iconFillCol transition duration-75"
                    xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
