--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -79,7 +79,7 @@
         </button>
         <p class="text-xs text-gray-600 font-normal mt-2 cursor-default w-full text-center">
             Existing User ? Click 
-            <span (click)="navigateTo('login')" class="text-blue-500 hover:underline cursor-pointer">here</span> 
+            <span (click)="navigateTo('auth/login')" class="text-blue-500 hover:underline cursor-pointer">here</span> 
             to Login
         </p>
     </div>
