--- a/src/app/my-home/sidebar/sidebar.component.html
+++ b/src/app/my-home/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <!-- side bar -->
-<div id="sidebar" class="overflow-y-auto hidden w-full md:block  top-0 left-0 z-40 h-screen flex-col" >
-   <div class="flex flex-col gap-8 scrollbar-thin h-full py-7 pl-3 pr-3 overflow-y-auto bg-bgColorSidebar">
+<div id="sidebar" class="w-56 overflow-y-auto hidden md:block  top-0 left-0 z-40 h-screen flex-col" >
+   <div class="flex flex-col gap-8 scrollbar h-full py-7 pl-3 pr-3 overflow-y-auto bg-bgColorSidebar">
       <div class="flex flex-col items-center gap-4">
          <p class="my-2 justify-center text-textColSecondary"> welcome home </p>
          <svg class="flex-shrink-0 w-12 h-12 fill-iconFillCol" xmlns="http://www.w3.org/2000/svg"
@@ -45,7 +45,7 @@
          </li>
  
          <li class="rounded-lg hover:bg-btnSecondaryHover w-40">
-            <a href="/user/home" class="flex flex-row justify-center p-2 text-textColSecondary group">
+            <a href="/user/items" class="flex flex-row justify-center p-2 text-textColSecondary group">
                <svg
                    class="mt-1 flex-shrink-0 w-5 h-5 fill-iconFillCol transition duration-75"
                    xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
