--- a/src/app/my-home/item/item.component.html
+++ b/src/app/my-home/item/item.component.html
@@ -1,9 +1,8 @@
-<div class="flex flex-col gap-6 p-5">
-    <!-- Item Search section -->
-    <section class="flex flex-col gap-3">
-        <div class="flex flex-col gap-2 md:flex md:flex-row md:gap-2">
-            <input type="text" placeholder="Search" class="shadow-md rounded-md border-gray-400 focus:border-gray-500 sm:w-full md:w-[90%]">
-            <button class="flex gap-3 bg-buttonPrimary p-3 shadow-md rounded-lg hover:bg-btnPrimaryHover sm:w-full md:w-[10%]">
+<div class="flex flex-col gap-6 p-5 h-full">
+    <section class="flex flex-col gap-3 ">
+        <div class="flex flex-wrap md:flex-nowrap gap-2 items-end">
+            <input type="text" placeholder="Search" class="shadow-md rounded-md border-gray-400 focus:border-gray-500 w-full">
+            <button class="justify-center flex gap-3 bg-buttonPrimary p-2 shadow-md rounded-lg hover:bg-btnPrimaryHover sm:w-full md:w-auto">
                 <svg
                 class="mt-[6px] flex-shrink-0 w-4 h-4 fill-iconFillCol transition duration-75"
                 xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
@@ -39,7 +38,6 @@
                         <input type="text" placeholder="Search..."
                             class="rounded-lg h-8 w-[100%] border-gray-400 focus:border-gray-500">
                     </div>
-                    <!-- <hr> -->
                     <div class="max-h-44 overflow-y-auto scrollbar px-3">
                         <ul>
                             <li class="border-t py-2 border-gray-200 text-xs">Option 1 opttttttttttttttttttttttttttt nnb bbb</li>
@@ -85,14 +83,13 @@
             </div>
         </div>
     </section>
-    <!-- Item List Setion -->
     <section >
         <div class="flex flex-col gap-3">
             <p class=" font-semibold text-3xl text-textColSecondary"> Items </p>
             <p class="text-textColSecondary">187 results</p>
         </div>
         <div class="grid grid-cols-1 gap-2 md:grid-cols-2 md:gap-3 lg:grid-cols-3 lg:gap-4">
-            <a *ngFor="let item of itemList" href="/user/item/{{item._id}}" class="max-w-sm bg-white border border-gray-200 rounded-lg shadow">
+            <a *ngFor="let item of itemList" href="/user/item/{{item._id}}" class="max-w-sm bg-white border border-gray-200 rounded-lg shadow w-[100%]">
                 <span class="relative">
                     <img class=" rounded-t-lg w-full h-32" src="https://voltalithiumhub.in/wp-content/uploads/2021/07/48V-20AH-Lithium-Ion-Battery-for-Hero-Flash-Hero-NYX-Hero-Optima-Tunwal-Yo-Bikes.jpeg" alt="" />
                     <a href="" class="absolute left-2 px-2 bottom-[8px] bg-headerCol shadow-md rounded-md">
