--- a/src/app/shared/components/modal/modal.component.html
+++ b/src/app/shared/components/modal/modal.component.html
@@ -1,6 +1,6 @@
-<div class="fixed top-0 left-0 w-full h-full bg-black opacity-50 z-50" ></div>
+<div class="fixed top-0 left-0 w-full h-full bg-black opacity-50 z-50"(click)="closeModal()" ></div>
 
-<div class="fixed top-1/2 left-1/2 flex flex-col gap-5 transform -translate-x-1/2 -translate-y-1/2 bg-white p-7 rounded-2xl shadow-lg z-50 w-2/6">
+<div class="fixed top-1/2 left-1/2 flex flex-col gap-5 transform -translate-x-1/2 -translate-y-1/2 bg-white p-7 rounded-2xl shadow-lg z-50">
 
   <!-- Modal header -->
   <div class="flex flex-col gap-3 justify-center p-2 md:p-2 rounded-t">
