--- a/src/app/my-home/item/item.component.html
+++ b/src/app/my-home/item/item.component.html
@@ -86,9 +86,10 @@
     <section >
         <div class="flex flex-col gap-3">
             <p class=" font-semibold text-3xl text-textColSecondary"> Items </p>
-            <p class="text-textColSecondary">187 results</p>
+            <p class="text-textColSecondary">{{itemList?.length || 0}} results</p>
         </div>
-        <div class="grid grid-cols-1 gap-2 md:grid-cols-2 md:gap-3 lg:grid-cols-3 lg:gap-4">
+        <div *ngIf="itemList?.length>0; else noResult" 
+            class="grid grid-cols-1 gap-2 md:grid-cols-2 md:gap-3 lg:grid-cols-3 lg:gap-4">
             <a *ngFor="let item of itemList" href="/user/item/{{item._id}}" class="max-w-sm bg-white border border-gray-200 rounded-lg shadow w-[100%]">
                 <span class="relative">
                     <img class=" rounded-t-lg w-full h-32" src="https://voltalithiumhub.in/wp-content/uploads/2021/07/48V-20AH-Lithium-Ion-Battery-for-Hero-Flash-Hero-NYX-Hero-Optima-Tunwal-Yo-Bikes.jpeg" alt="" />
@@ -104,5 +105,8 @@
                 </div>
             </a>   
         </div>
+        <ng-template #noResult>
+            <h2 class="text-sm mt-4">No Items Found</h2>
+        </ng-template>
     </section>
 </div>
