main: Create Asset/ Item modal added, change to tailwind config, bug fix

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 <app-modal *ngIf="showModal" 
     (onModalClose)="onCloseModal($event)"
     [headerMessage]="modalTitleMsg"
+    [modalWidth]="modalWidth"
     [headerDescription]="modalTitleDescription"
     [showModalBody]="showModalBody"
     [modalName]="popupName"
